@@ -1,3 +1,5 @@
 GLOBALS = globals()
 
 PROJECTNAME = "collective.geo.settings"
+
+KEY = 'collective.geo.settings.containersettings'
